# form

./: .gitignore  CMakeLists.txt  configcmake.h.in
doc/manual/: statements.tex
sources/: optimize.cc
